--- a/mosaic-website/src/components/sections/Landing/Landing.css
+++ b/mosaic-website/src/components/sections/Landing/Landing.css
@@ -61,6 +61,7 @@
   text-align: center;
   width: 100%;
   position: relative;
+  
 }
 
 .each-slide ::before {
@@ -76,5 +77,5 @@
 }
 
 .each-slide div {
-  height: 100vh;
+  width: 100%;
 }
